# alai-primo-py

./: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
oratabss/: __init__.py  app.py  base.py  due.py  uno.py
oratabss/utils/: version.py
src/: andrea.py
src/oratabss/: __int__.py  mybase.py
