[metadata]
name = alai-primo-py
version = 0.0.1
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alai-arpas/alai-primo-py
author = Andrea Lai
author_email = "Andrea Lai" <laidevpub@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
package_dir =
    =src
include_package_data = True
